tests/suite/snapshots/suite__check__tests__check__bad-multiple-return.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-multiple-return.xi:6:12]
   │
 6 │     return foo()
   ·            ──┬──  
   ·              ╰──── Not a single expression type
───╯

